alignment issue

--- a/assets/css/pages/projectpage.css
+++ b/assets/css/pages/projectpage.css
@@ -236,7 +236,7 @@ h6{
     }
   
     .container {
-      padding: 0 30px;
+      padding: 0 16px;
     }
   
     table {
